--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,3 +1,5 @@
+$primaryColor:#1e91cf;
+
 html, body {
   margin:0;
   padding:0;
@@ -9,21 +11,25 @@ html, body {
   position:fixed;
   height:100px;
   width:100%;
-  background-color:blue;
+  background-color:$primaryColor;
 }
 #side-bar{
   position:fixed;
   width:10%;
   margin-top:100px;
   height:calc(100% - 100px);
-  background-color:blue;
+  background-color:$primaryColor;
   color:#fff;
 
   ul {
     padding:0;
-    
+
     li {
       list-style-type:none;
+      background-color:$primaryColor;
+      &:hover{
+        background-color:lighten($primaryColor,20%);
+      }
     }
   }
 
@@ -31,7 +37,9 @@ html, body {
 }
 #container{
   width:90%;
+  height:calc(100% - 100px);
+  position:fixed;
   background-color:pink;
-  color:#fff;
-  margin-left:10%;
+  color:#000;
+  margin:100px 0 0 10%;
 }
