--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,2 +1,4 @@
-@import '../node_modules/bootstrap/dist/css/bootstrap';
+@import '../node_modules/font-awesome/scss/font-awesome';
 @import 'styles';
+@import 'login';
+@import 'helpers';
