--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,10 +1,11 @@
 $primaryColor:#1e91cf;
+$secondaryColor:#15D870;
 
 html, body {
   margin:0;
   padding:0;
   font-size:16px;
-  font-family:arial, sans-serif;
+  font-family:'Open Sans', sans-serif;
   color:#000;
 }
 #header {
