add style changes

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,4 +4,7 @@
 @import 'helpers';
 @import 'classroom';
 @import 'curriculum';
+@import 'faculty';
+@import 'myschedule';
 @import 'schedule_wizard';
+@import 'campus';
