--- a/sass/classroom.scss
+++ b/sass/classroom.scss
@@ -1,8 +1,8 @@
 .classroom-container{
   position:relative;
   display:block;
-  width:100%auto;
-  height:100%
+  width:100%;
+  height:100%;
 }
 
 .classroom-selector {
@@ -11,7 +11,7 @@
   border:solid 1px #cccccc;
   color:#666666;
   position:absolute;
-  top:250px;
+  top:180px;
   right:-100%;
   padding:15px;
   box-sizing: border-box;
@@ -45,15 +45,15 @@
   }
 
   &.completed{
-    right:calc(100% - 250px);
-    top:0;
+    right:calc(50% + 135px);
+    top:20px;
 
     &.select-building{
-      right:calc(100% - 510px);
+      right:calc(50% - 125px);
     }
 
     &.select-floor{
-      right:calc(100% - 770px);
+      right:calc(50% - 385px);
     }
   }
 
