--- a/sass/helpers.scss
+++ b/sass/helpers.scss
@@ -137,6 +137,16 @@
 }
 
 //form elements
+.form-container{
+  padding:15px;
+  box-sizing: border-box;
+  border:solid 1px #cccccc;
+  border-radius:5px;
+  display:block;
+  text-align: left;
+  background-color: #f5f5f5;
+}
+
 .form-row{
   display:block;
   width:100%;
@@ -165,7 +175,7 @@
     width:35%;
     color:#666666;
     font-size:14px;
-    font-weight:400;
+    font-weight:bold;
   }
 
   label.checkbox-label{
