--- a/sass/classroom.scss
+++ b/sass/classroom.scss
@@ -22,7 +22,7 @@
     display:block;
     width:100%;
     text-align: center;
-    font-weight:500;
+    font-weight:600;
   }
 
   select {
@@ -32,7 +32,7 @@
     padding:0 7px;
     box-sizing: border-box;
     margin:15px 0;
-    border-color:#000;
+    border-color:#aeaeae;
     border-radius:3px;
     color:#000;
     background-color:#fff;
@@ -47,6 +47,7 @@
   &.completed{
     right:calc(50% + 135px);
     top:20px;
+    background-color: #f5f5f5;
 
     &.select-building{
       right:calc(50% - 125px);
@@ -58,7 +59,7 @@
   }
 
   &.active{
-    right: calc(50% - (250px - 10%));
+    right: calc(50% - 125px);
   }
 }
 
