--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -86,8 +86,8 @@ html, body {
   width:85%;
   height:100%;
   color:#000;
-  overflow-y:auto;
-  overflow-x: hidden;
+  /*overflow-y:auto;
+  overflow-x: hidden;*/
   display:table-cell;
   font-size:16px;
   box-sizing:border-box;
