--- a/sass/campus.scss
+++ b/sass/campus.scss
@@ -3,6 +3,8 @@
   width:100%;
   min-height:400px;
   font-size:0;
+  position:relative;
+  z-index:0;
 
   >section{
     display:inline-block;
@@ -10,11 +12,110 @@
     width:33.3333333%;
     font-size:16px;
     transition: all 0.3s ease-in-out;
+    float:left;
+    position:relative;
+
+    .campus-buildings{
+
+      width:0%;
+      float:left;
+      opacity: 0;
+      visibility: hidden;
+    }
+
+    .campus-info-container{
+      width:100%;
+      float:left;
+    }
+
+    .close-edit{
+      position:absolute;
+      top:10px;
+      right:10px;
+      display:block;
+      opacity: 0;
+      visibility: hidden;
+      color:red;
+    }
+
+    &.edit-campus{
+      position:absolute;
+      top:0;
+      left:0;
+      width:100%;
+      background-color:#f2f2f2;
+      transition:all 0.25s ease-in-out;
+      z-index:9999999;
+
+      .campus-info-container{
+        width:25%;
+        margin:0;
+        transition: all 0.25s ease-in 0.4s;
+      }
+
+      .campus-buildings{
+        width:75%;
+        visibility: visible;
+        opacity: 1;
+        transition: opacity 0.25s ease-in 1s;
+      }
+
+      .close-edit{
+        opacity: 1;
+        visibility:visible;
+        transition: all 0.25s ease-in 0.25s;
+      }
+    }
 
     &:hover{
       background-color:#efefef;
       box-shadow: 1px 1px 10px #cccccc;
       transition: all 0.3s ease-in-out;
     }
+
+    button {
+      margin:10px auto;
+      display:block;
+    }
   }
+}
+
+.building-container {
+  width:500px;
+  margin:50px auto;
+
+}
+.campus-image{
+
+  background-repeat: no-repeat;
+  background-size: cover;
+  border: 1px solid #000;
+  border-radius: 100%;
+  height: 150px;
+  width: 150px;
+  margin: 30px auto;
+
+  &.access-road{
+    background-image: url(../images/access_campus.jpg);
+  }
+
+  &.east-green{
+    background-image: url(../images/eg_campus.jpg);
+  }
+
+  &.post-road{
+    background-image: url(../images/post_campus.jpg);
+  }
+
+}
+
+
+.campus-address {
+  margin-top:30px;
+
+  .campus-card-header{
+    font-weight:600;
+    font-size:16px;
+  }
+
 }
